# atreei

./: .gitignore  Ati.h  CMakeLists.txt  ImplicitKeyThreadedATI.c  ImplicitKeyThreadedATI.h  LICENSE  TemplateATI.h  ThreadedATI.c  ThreadedATI.h  ThreadedAvlTree.c  ThreadedAvlTree.h  deletion.drawio  main.c
test/: CMakeLists.txt  test_ImplicitKeyThreadedATI.c  test_ThreadedATI.c  test_ati_helper.h
